# ORION

./: ARCHITECTURE.md  DEEPSEEK_OCR_REFERENCE.md  DEEPSEEK_OCR_SETUP.md  MEMBER1_UPDATE.md  README.md  demo_member1.py  demo_storage.py  evaluate_retrieval.py  member1_example_workflow.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test_api_endpoints.py  test_deepseek_integration.py  test_e2e_ingestion.py
data/: chat_history.db
docs/: FRONTEND_DESIGN.md
electron/: main.js  python-backend.js
renderer/: index.html  package-lock.json  package.json  tailwind.config.js
renderer/src/: App.jsx  index.css
renderer/src/components/: ChatInterface.jsx  CitationPanel.jsx  FileUpload.jsx  Settings.jsx  Sidebar.jsx
renderer/src/hooks/: useKeyboardShortcuts.js  useStreamingResponse.js
renderer/src/services/: api.js  ipc.js
renderer/src/store/: store.js
renderer/src/styles/: globals.css
renderer/src/views/: CollectionsManager.jsx  Dashboard.jsx  QueryWorkspace.jsx  SettingsView.jsx
src/: __init__.py  config.py
src/api/: main.py  models.py
src/api/routes/: __init__.py  ingest.py  manage.py  query.py
src/chunking/: __init__.py  chunker.py
src/embedding/: embedder.py
src/generation/: embedding.py  llm.py
src/ocr/: __init__.py  deepseek_ocr.py
src/processors/: __init__.py  base.py  docx_processor.py  image_processor.py  pdf_processor.py  voice_processor.py
src/retrieval/: __init__.py  retriever.py
src/storage/: __init__.py  chunk_storage.py
src/vectorstore/: chroma_store.py
tests/: retrieval_metrics.py
(+20 files in other folders)
